--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<p>Hello, World! This is a very simple HTML documen</p>
+<p>Hello, World! This is a very simple HTML document.</p>
 <img src="placeholder.jpg" alt="placeholder image" id="placeholder_image">
 </body>
 
